<resources>
    <string name="app_name">Self-Health</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_doctor">Doctor</string>
    <string name="nav_schedule">Schedule</string>
    <string name="nav_assessment">Assessment</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_measure">Measure</string>
    <string name="nav_about_us">About Us</string>

    <string name="assign_tasks">Assign Tasks</string>
    <string name="add_patient">Add Patient</string>


    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Measurement</item>
        <item>Doctor</item>
        <item>Schedule</item>
        <item>Assessment</item>
        <item>Settings</item>
    </string-array>


    <string-array name="nav_item_activity_titles_doc">
        <item>Home</item>
        <item>Assign Tasks</item>
        <item>Add Patients</item>
        <item>Assessment</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="Rec_off">Touch to start recording.</string>
    <string name="Rec_on">Recording. Touch to stop.</string>
    <string name="HR_type">Heart Rate</string>
    <string name="BODY_TEMP_type">Body Temperature</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Bluetooth Connection Constants-->
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>


    <string-array name="medicine_array">
        <item>None</item>
        <item>Taken</item>
        <item>Not taken</item>
    </string-array>


</resources>
