<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_assign_tasks"
            android:icon="@drawable/ic_doctor_black"
            android:title="@string/assign_tasks" />
        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/ic_doctor_black"
            android:title="@string/add_patient" />

        <item
            android:id="@+id/nav_assessment"
            android:icon="@drawable/ic_assessment_black"
            android:title="@string/nav_assessment" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_setting_black"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
        </menu>
    </item>

</menu>
